# acts-channel

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  publish.yml
proto/: acts.grpc.rs  acts.proto
src/: action_result.rs  channel.rs  lib.rs  utils.rs  vars.rs
src/model/: error.rs  info.rs  message.rs  mod.rs  package.rs  result.rs  vars.rs
src/tests/: act.rs  mod.rs  server.rs  workflow.rs
