[package]
authors = ["yao <39178011@qq.com>"]
categories = ["workflow"]
description = "acts client channel for acts-server"
documentation = "https://rbatis.github.io/rbatis.io"
edition = "2021"
homepage = "https://rbatis.github.io/rbatis.io"
keywords = ["workflow"]
license = "MIT"
name = "acts-channel"
readme = "Readme.md"
repository = "https://github.com/yaojianpin/acts-channel.git"
version = "0.3.0"

[dependencies]
futures = "0.3.28"
prost = "0.11.8"
prost-types = "0.11.9"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tokio = "1.29.1"
tonic = "0.8.3"

[build-dependencies]
tonic-build = { version = "0.8.4" }
