[package]
authors = ["yao <39178011@qq.com>"]
categories = ["workflow"]
description = "acts client channel for acts-server"
documentation = "https://github.com/yaojianpin/acts-channel"
edition = "2021"
homepage = "https://github.com/yaojianpin/acts-channel"
keywords = ["workflow", "channel"]
license = "MIT"
name = "acts-channel"
readme = "Readme.md"
repository = "https://github.com/yaojianpin/acts-channel.git"
version = "0.4.0"

[dependencies]
chrono = "0.4.38"
futures = "0.3.28"
prost = "0.11.8"
prost-types = "0.11.9"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tokio = "1.29.1"
tonic = "0.8.3"

[build-dependencies]
tonic-build = { version = "0.8.4" }

[features]
default = []
build_proto = []
