[package]
authors = ["yao <39178011@qq.com>"]
description = "acts client channel for acts-server"
documentation = "https://github.com/yaojianpin/acts-channel"
edition = "2021"
homepage = "https://github.com/yaojianpin/acts-channel"
keywords = ["workflow-channel"]
license = "MIT"
name = "acts-channel"
readme = "Readme.md"
repository = "https://github.com/yaojianpin/acts-channel.git"
version = "0.8.0"

[dependencies]
chrono = "0.4.38"
futures = "0.3.28"
nanoid = "0.4.0"
prost = "0.11.8"
prost-types = "0.11.9"
regex = "1.11.1"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.34"
thiserror = "1.0.66"
tokio = "1.29.1"
tokio-stream = "0.1.16"
tonic = "0.8.3"

[build-dependencies]
tonic-build = { version = "0.8.4" }

[features]
default = []
codegen = []
docker_test = []

[dev-dependencies]
acts = { version = "0.12.3" }
